<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project 3</string>
    <string name="action_settings">Settings</string>
    <string name="provider">Provider:</string>
    <string name="dummy">Dummy</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="reset">Reset Drawing</string>
    <string name="setscale">Change Map Scale</string>
    <string name="scaletext">New Scale Factor (Default is 100,000):</string>

</resources>